Added caching and optimizing code for backend