@@ -1,7 +1,9 @@
 package com.example.demo.service;
 
 import org.springframework.stereotype.Service;
+import org.springframework.cache.annotation.Cacheable;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.nio.file.Files;
 import java.time.LocalTime;
@@ -11,73 +13,118 @@ import java.util.stream.Collectors;
 @Service
 public class SmDataService {
 
-    // Folder path relative to resources
     private static final String BASE_FOLDER = "/01_sm_csv/";
 
+    private static final Map<String, Integer> columnIndexMap = Map.ofEntries(
+        Map.entry("powerallphases", 0),
+        Map.entry("powerl1", 1),
+        Map.entry("powerl2", 2),
+        Map.entry("powerl3", 3),
+        Map.entry("currentneutral", 4),
+        Map.entry("currentl1", 5),
+        Map.entry("currentl2", 6),
+        Map.entry("currentl3", 7),
+        Map.entry("voltagel1", 8),
+        Map.entry("voltagel2", 9),
+        Map.entry("voltagel3", 10),
+        Map.entry("phaseanglevoltagel2l1", 11),
+        Map.entry("phaseanglevoltagel3l1", 12),
+        Map.entry("phaseanglecurrentvoltagel1", 13),
+        Map.entry("phaseanglecurrentvoltagel2", 14),
+        Map.entry("phaseanglecurrentvoltagel3", 15)
+    );
 
-    // Main method to aggregate data for a specific device (e.g., "01")
-    public List<Map<String, Object>> getAggregatedDataForSm() {
-        List<Map<String, Object>> results = new ArrayList<>();
+    private static final Map<String, String> columnDescriptions = Map.ofEntries(
+        Map.entry("powerallphases", "Sum of real power over all phases"),
+        Map.entry("powerl1", "Real power phase 1"),
+        Map.entry("powerl2", "Real power phase 2"),
+        Map.entry("powerl3", "Real power phase 3"),
+        Map.entry("currentneutral", "Neutral current"),
+        Map.entry("currentl1", "Current phase 1"),
+        Map.entry("currentl2", "Current phase 2"),
+        Map.entry("currentl3", "Current phase 3"),
+        Map.entry("voltagel1", "Voltage phase 1"),
+        Map.entry("voltagel2", "Voltage phase 2"),
+        Map.entry("voltagel3", "Voltage phase 3"),
+        Map.entry("phaseanglevoltagel2l1", "Phase shift between voltage on phase 2 and 1"),
+        Map.entry("phaseanglevoltagel3l1", "Phase shift between voltage on phase 3 and 1"),
+        Map.entry("phaseanglecurrentvoltagel1", "Phase shift between current/voltage on phase 1"),
+        Map.entry("phaseanglecurrentvoltagel2", "Phase shift between current/voltage on phase 2"),
+        Map.entry("phaseanglecurrentvoltagel3", "Phase shift between current/voltage on phase 3")
+    );
 
+    @Cacheable(value = "smartMeterCache", key = "#column + '-' + #interval")
+    public List<Map<String, Object>> getAggregatedDataForSm(String column, int interval) {
         try {
-            // Locate the folder using the resource path
+            int columnIndex = columnIndexMap.getOrDefault(column, 0);
+            String description = columnDescriptions.getOrDefault(column, column);
             File folder = new File(getClass().getResource(BASE_FOLDER).toURI());
-
-            // Get all CSV files in that folder
             File[] files = folder.listFiles((dir, name) -> name.endsWith(".csv"));
 
-            if (files != null) {
-                Arrays.sort(files); // Optional: sort files by name (so dates are ordered)
+            if (files == null) return Collections.emptyList();
 
-                // Process each file (each file = 1 day of 1-second data)
-                for (File file : files) {
-                    String date = file.getName().replace(".csv", ""); // Get the date from filename
+            Arrays.sort(files);
 
-                    // Read all lines, parse each line as a Double 
-                    List<Double> values = Files.readAllLines(file.toPath())
-                        .stream()
-                        .map(String::trim)
-                        .filter(s -> !s.isEmpty())
-                        .map(line -> line.split(",")[0]) // take only first column
-                        .map(Double::parseDouble)
-                        .toList();
+            return Arrays.stream(files)
+                .parallel()
+                .map(file -> processFile(file, columnIndex, interval, column, description))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
 
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Collections.emptyList();
+        }
+    }
 
-                    // Store 15-minute average blocks in this list
-                    List<Map<String, Object>> intervals = new ArrayList<>();
+    private Map<String, Object> processFile(File file, int columnIndex, int interval, String column, String description) {
+        try {
+            String date = file.getName().replace(".csv", "");
+            List<Double> values = new ArrayList<>();
 
-                    // Go through the values in blocks of 900 (15 min = 900 seconds)
-                    for (int i = 0; i < values.size(); i += 900) {
-                        List<Double> chunk = values.subList(i, Math.min(i + 900, values.size()));
-
-                        // Calculate the average of this chunk
-                        double avg = chunk.stream().mapToDouble(d -> d).average().orElse(0.0);
-
-                        // Determine the time label (e.g., 00:00, 00:15, etc.)
-                        int mins = (i / 900) * 15;
-                        LocalTime time = LocalTime.of(mins / 60, mins % 60);
-
-                        // Add time + average value to the interval list
-                        intervals.add(Map.of(
-                            "time", time.toString().substring(0, 5), // format: "HH:mm"
-                            "value", avg
-                        ));
+            try (BufferedReader reader = Files.newBufferedReader(file.toPath())) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    if (!line.isEmpty()) {
+                        int idx = 0, commaCount = 0;
+                        for (int i = 0; i < line.length(); i++) {
+                            if (line.charAt(i) == ',') {
+                                commaCount++;
+                                if (commaCount == columnIndex + 1) {
+                                    values.add(Double.parseDouble(line.substring(idx, i)));
+                                    break;
+                                }
+                                idx = i + 1;
+                            } else if (i == line.length() - 1 && commaCount == columnIndex) {
+                                values.add(Double.parseDouble(line.substring(idx)));
+                            }
+                        }
                     }
-
-                    // Add the daily result to the final list
-                    results.add(Map.of(
-                        "description", "general-electricity",
-                        "date", date,
-                        "interval", "15min",
-                        "data", intervals
-                    ));
                 }
             }
 
-        } catch (Exception e) {
-            e.printStackTrace(); // Log any file-reading or parsing errors
-        }
+            List<Map<String, Object>> intervals = new ArrayList<>();
+            int intervalSize = interval * 60;
 
-        return results; // List of days with 15-min interval data
+            for (int i = 0; i < values.size(); i += intervalSize) {
+                List<Double> chunk = values.subList(i, Math.min(i + intervalSize, values.size()));
+                double avg = chunk.stream().mapToDouble(Double::doubleValue).average().orElse(0.0);
+                int mins = (i / intervalSize) * interval;
+                LocalTime time = LocalTime.of(mins / 60, mins % 60);
+                intervals.add(Map.of("time", time.toString().substring(0, 5), "value", avg));
+            }
+
+            return Map.of(
+                "date", date,
+                "interval", interval,
+                "data", intervals,
+                "column_name", column,
+                "description", description
+            );
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 }
